[tmux] add pane-border-status top

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -133,7 +133,7 @@ setw -g window-status-current-format "#[fg=#FFA590]#[bg=#FFA590,fg=#1c1c1c,bold]
 # Pane borders
 set -g pane-border-style fg=colour238,bg=default
 set -g pane-active-border-style fg=colour208,bg=default
-set -g pane-border-status off
+set -g pane-border-status top
 
 # Message style
 set -g message-style "bg=#E8C875,fg=#1c1c1c,bold"
