[tmux] pane title: rich: when an app sets one, cmd-name: fall back

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -134,6 +134,7 @@ setw -g window-status-current-format "#[fg=#FFA590]#[bg=#FFA590,fg=#1c1c1c,bold]
 set -g pane-border-style fg=colour238,bg=default
 set -g pane-active-border-style fg=colour208,bg=default
 set -g pane-border-status bottom
+set -g pane-border-format " #P: #{?#{==:#{pane_title},#{host}},#{pane_current_command},#{pane_title}} "
 
 # Message style
 set -g message-style "bg=#E8C875,fg=#1c1c1c,bold"
